--- a/frontend/src/public/components/TemplateEdit/KickoffRedux/KickoffRedux.css
+++ b/frontend/src/public/components/TemplateEdit/KickoffRedux/KickoffRedux.css
@@ -97,7 +97,6 @@
 
   svg {
     position: relative;
-    top: -0.2rem;
   }
 
   &:hover {
